# lambdasawa

./: .bashrc  .default-cargo-crates  .default-golang-pkgs  .default-npm-packages  .default-python-packages  .gitconfig  .gitignore  .gitmodules  .tigrc  .tmux.conf  .tool-versions  .zshrc  404.html  Brewfile  README.md  index.html  robots.txt  search_index.en.js  setup.sh  sitemap.xml
.config/: starship.toml
.config/fish/: alias.fish  config.fish  function.fish  hook.fish  override.fish  var.fish
.config/gh/: config.yml
.config/git/: alias  delta  difftastic  ghq  ignore
.config/ongaku/: playlist.txt  youtube-playlists.txt  youtube-videos.txt
.config/tridactyl/: tridactylrc
.github/workflows/: metrics.yml  zola.yml
blog/: desktop-environment.md  microcms-sdk-generator.md  oswe-review.md  serverless-stack-live-lambda-developmet-internal.md
blog/amplify-hotswap/: index.html
blog/aws-lambda-runtime-patch-versions/: index.html
blog/aws-saa/: index.html
blog/blog-renewal/: index.html
blog/cafe-sutdio-microcms/: index.html
blog/direnv-sops/: index.html
cheatsheet/: index.md
content/: index.html
docs/: CNAME  README.md  _config.yml  android-debug.md  android.md  aws-amplify-to-terraform.md  aws-cdk.md  aws-cloudwatch-logs.md  aws-cloudwatch-synthetics.md  aws-dynamodb.md  aws-ecs.md  aws-iam.md  aws-lambda.md  aws-otel.md  aws-s3.md  aws-secrets-manager.md  aws-terraform-template.tf  aws-terraform.md  aws-workshop-list.md  aws.md  bug-bounty.md  bun.md  cli-tools.md  cloudwatch-logs.md  cloudwatch-synthetics.md  compress.md  crkbd-oled.md  database-tools.md  deno.md  dns.md  docker.md  dsq.md  dynamodb.md  ecs.md  elasticsearch-and-opensearch.md  feed.txt  ffmpeg.md  flutter.md  gadget.md  gcp.md  (+53 more)
memo/: README.md  index.md
pages/: config.toml
sandbox/: Taskfile.yml
sandbox/python-aws/: Taskfile.yml  pyproject.toml
sandbox/python-aws/python_aws/: main.py
sandbox/python-google-cloud/: Taskfile.yml  pyproject.toml
sandbox/python-google-cloud/python_google_cloud/: main.py
sandbox/python-llama-index-microcms/: .env.sample  build.py  pyproject.toml  query.py
sandbox/python-sqlalchemy-neondb/: Taskfile.yml  pyproject.toml
sandbox/python-sqlalchemy-neondb/python_sqlalchemy_neondb/: main.py
sandbox/rust-web-server/axum-diesel-todo/: Cargo.toml  docker-compose.yml
sandbox/rust-web-server/axum-diesel-todo/migrations/2022-10-18-200832_create_users/: up.sql
sandbox/rust-web-server/axum-diesel-todo/migrations/2022-10-19-014910_create_tasks/: up.sql
sandbox/rust-web-server/axum-diesel-todo/src/: main.rs  schema.rs
sandbox/rust-web-server/axum-diesel-todo/src/handlers/: me_get.rs  mod.rs  sign_in.rs  sign_up.rs
sandbox/rust-web-server/axum-diesel-todo/src/handlers/tasks/: create.rs  delete.rs  mod.rs  read_list.rs  update.rs
sandbox/rust-web-server/axum-diesel-todo/src/models/: tasks.rs  users.rs
sandbox/rust-web-server/axum-diesel-todo/src/utils/: jwt.rs
sandbox/rust-web-server/axum-sandbox/: Cargo.toml
sandbox/rust-web-server/axum-sandbox/src/: main.rs
sandbox/youtube-transcribe/: .gitignore  Taskfile.yml  pyproject.toml
sandbox/youtube-transcribe/youtube_transcribe/: main.py
script/: setup-asdf.sh  setup-essential.sh  setup-home-bin.sh  setup-home-dirs.sh  setup-symlinks.sh
(+789 files in other folders)
