[tool.poetry]
name = "python-aws"
version = "0.1.0"
description = ""
authors = ["Tsubasa Irisawa <lambdasawa@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_aws" }]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.26.146"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
