[tool.poetry]
name = "python-llama-index-microcms"
version = "0.1.0"
description = ""
authors = ["Tsubasa Irisawa <lambdasawa@gmail.com>"]
readme = "README.md"
packages = [{include = "python_llama_index_microcms"}]

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "^0.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
