[tool.poetry]
name = "python-sqlalchemy-neondb"
version = "0.1.0"
description = ""
authors = ["Tsubasa Irisawa <lambdasawa@gmail.com>"]
readme = "README.md"
packages = [{include = "python_sqlalchemy_neondb"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.15"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
