[tool.poetry]
name = "youtube-transcribe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "youtube_transcribe"}]

[tool.poetry.dependencies]
python = "^3.7"
yt-dlp = "^2023.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
