[package]
name = "axum-diesel-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = { version = "0.5.16", features = ["headers"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }
rand_core = { version = "0.6", features = ["std"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
